[package]
name = "sparsetools"
version = "0.2.1"
description = "2-D sparse matrix package for numeric data"
license = "BSD-3-Clause"
repository = "https://github.com/rwl/sparsetools"
edition = "2018"

[dependencies]
anyhow = "1"
num-traits = "0.2"
num-complex = "0.4"
rand = "0.8"
tabwriter = "1.2"
pretty_dtoa = "0.3"
opimps = "0.2"
